<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".informacao.InformacaoActivity">

    <TextView
        android:id="@+id/tvNomeAlune"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_36"
        android:layout_marginTop="@dimen/margem_40"
        android:text="@string/nome_alune"
        android:textSize="@dimen/fonte_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMediaAlune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exemplo_media"
        android:layout_marginTop="@dimen/margem_24"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeAlune"
        app:layout_constraintStart_toStartOf="@+id/tvNomeAlune"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_aprovacao"
        android:layout_marginTop="@dimen/margem_24"
        app:layout_constraintStart_toStartOf="@+id/tvMediaAlune"
        app:layout_constraintTop_toBottomOf="@+id/tvMediaAlune" />

</androidx.constraintlayout.widget.ConstraintLayout>